Add Monkey Metrics plugin

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
-support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Monkey Metrics
+author=Lotto
+support=https://github.com/devLotto/external-plugins/tree/monkey-metrics
+description=Shows helpful information when chinning.
+tags=maniacal,monkey,chinning,bursting,multi
+plugins=com.monkeymetrics.MonkeyMetricsPlugin
